// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:PopOver with offset: default 1`] = `
<div>
  <div
    class="amis-Form-item amis-Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="amis-Form-label"
    >
      <span>
        <span
          class="amis-TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="amis-Form-static"
    >
      <div
        class="amis-Field--popOverAble amis-Form-control"
      >
        <span
          class="amis-PlainField"
        >
          static
        </span>
        <span
          class="amis-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover no offset 1`] = `
<div>
  <div
    class="amis-Form-item amis-Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="amis-Form-label"
    >
      <span>
        <span
          class="amis-TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="amis-Form-static"
    >
      <div
        class="amis-Field--popOverAble amis-Form-control in has-popover"
      >
        <span
          class="amis-PlainField"
        >
          static
        </span>
        <span
          class="amis-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
        <div
          class="amis-PopOver amis-PopOverAble-popover"
          data-amis-theme="cxd"
          role="popover"
          style="display: block; left: 0px; top: 0px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="amis-Panel amis-Panel--default"
            data-role="container"
          >
            <div
              class="amis-Panel-body"
            >
              <span
                class="amis-TplField fr-view"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover with offset 1`] = `
<div>
  <div
    class="amis-Form-item amis-Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="amis-Form-label"
    >
      <span>
        <span
          class="amis-TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="amis-Form-static"
    >
      <div
        class="amis-Field--popOverAble amis-Form-control in has-popover"
      >
        <span
          class="amis-PlainField"
        >
          static
        </span>
        <span
          class="amis-Field-popOverBtn"
        >
          <icon-mock
            classname="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
        <div
          class="amis-PopOver amis-PopOverAble-popover"
          data-amis-theme="cxd"
          role="popover"
          style="display: block; left: 101px; top: 102px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="amis-Panel amis-Panel--default"
            data-role="container"
          >
            <div
              class="amis-Panel-body"
            >
              <span
                class="amis-TplField fr-view"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
